manifests/hello-world/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: web
        image: registry.redhat.io/rhel10/httpd-24:1790750455
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: html-volume
          mountPath: /var/www/html/index.html
          subPath: index.html
        # En OpenShift es una buena práctica (o requerimiento de SCC) ejecutar en puertos superiores al 1024
        # y configurar el puerto predeterminado de NGINX
      volumes:
      - name: html-volume
        configMap:
          name: html-template
