manifests/hello-world/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
    app.kubernetes.io/component: hello-world
    app.kubernetes.io/instance: hello-world
  name: hello-world
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: hello-world
