manifests/hello-world/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: hello-world
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
